# makevideopreviews

./: .gitignore  LICENSE  README.md  makevideopreviews.py  pyproject.toml
src/makevideopreviews/: __main__.py  app.py  defaults.py  discovery.py  docx_render.py  errors.py  interactive.py  media.py  models.py  utils.py
tests/: test_cli.py
