[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makevideopreviews"
version = "1.0.0"
description = "Create compact Word previews for large video folders."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "questionary>=2.0,<3",
  "python-docx>=1.1,<2",
  "Pillow>=10,<12",
]

[project.scripts]
makevideopreviews = "makevideopreviews.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
